infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: ticket-depl
spec:
   replicas: 1
   selector:
      matchLabels:
         app: ticket
   template:
      metadata:
         labels:
            app: ticket
      spec:
         containers:
            - name: ticket
              image: imsamad/ticket_ticket
---
apiVersion: v1
kind: Service
metadata:
   name: ticket-srv
spec:
   selector:
      app: ticket
   ports:
      - name: ticket
        protocol: TCP
        targetPort: 5000
        port: 5000
